-- fix db bugs.
